# ETC2TextureLoader

./: .gitignore  README.md  default.profraw  local.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni_main.c  texture.c  texture.h
app/src/main/java/com/intel/textureloader/: TextureLoaderActivity.java  TextureLoaderLib.java  TextureLoaderView.java
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
